2003-10-31  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* odepack/dlsode.f: Rename from odepack/lsode.f.
	* odepack/dlsode.f (DLSODE): Rename from LSODE to avoid name
	conflict with LSODE class constructors on systems that upcase
	Fortran names.

	* odessa/dodessa.f: Rename from odessa/odessa.f.
	* odessa/dodessa.f (DODESSA): Rename from ODESSA to avoid name
	conflict with ODESSA class constructors on systems that upcase
	Fortran names.

2003-10-30  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makefile.in (MISC_OBJ): Add misc/cquit.o to the list.

	* misc/Makefile.in (SPECIAL_SRC): Add cquit.c to the list.
	* misc/cquit.c: New file.
	* misc/quit.cc: Move everything except octave_interrupt_hook,
	octave_bad_alloc_hook, octave_throw_interrupt_exception, and
	octave_throw_bad_alloc to cquit.c.

2003-10-28  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* misc/quit.h (octave_interrupt_hook, octave_bad_alloc_hook):
	Move declarations outside of extern "C" block.

2003-10-27  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* misc/f77-fcn.h: Only use inline if this is C++.

	* misc/f77-fcn.c (xstopx): Return type is now F77_RET_T.
	Use F77_RETURN.
	* misc/machar.c (machar): Likewise.

	* misc/f77-fcn.h (F77_CHAR_ARG, F77_CONST_CHAR_ARG, F77_CHAR_ARG2,
	F77_CONST_CHAR_ARG2, F77_CXX_STRING_ARG, F77_CHAR_ARG_LEN,
	F77_CHAR_ARG_DECL, F77_CONST_CHAR_ARG_DECL, F77_CHAR_ARG_LEN_DECL,
	F77_RET_T, F77_RETURN): New macros.
	[F77_USES_CRAY_CALLING_CONVENTION]: New data conversion functions.

	* misc/quit.h (octave_interrupt_hook, octave_bad_alloc_hook):
	Move function pointer declarations inside __cplusplus section.

2003-07-29  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makefile.in (install-lib): Use $(INSTALL), not
	$(INSTALL_PROGRAM) for $(SHLLIB) files.

2003-07-02  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makefile.in (CLEAN_SUBDIRS): New variable.
	(clean mostlyclean distclean maintainer-clean): Use it to ensure
	cleaning in all subdirs, not just those we build in.
